--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
   <meta name="keywords" content="Entornos Virtuales, Dise&nacute;o, ingenier&iacute;a">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <!-- Titulo -->
-  <title>Portafolio de Fulanito de tal</title>
+  <title>Portafolio de Julia</title>
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="./images/devico.png">
   
@@ -82,9 +82,9 @@
       flex-column 
       justify-content-center 
       align-items-center">
-      <img class="hero-image-dev" src="./images/Captura de pantalla (2).png" alt="Foto de Fulanito">
+      <img class="hero-image-dev" src="./images/143459682.png" alt="Foto de Fulanito">
       <h1>
-          Hola soy Fulanito de tal
+          Hola soy Julia Gonzalez
       </h1>
       <h2>
           Desarrollo entornos virtuales y escribo art&iacute;culos sobre dise&nacute;o.
@@ -98,7 +98,7 @@
   <!-- About me-->
   <section id="sobre-mi" class="sobre-mi seccion-oscura">
     <div class="contenedor">
-      <h2 class="seccion-titulo">Conoce a Fulanito</h2>
+      <h2 class="seccion-titulo">Conoceme</h2>
       <p class="seccion-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore earum consequuntur nostrum? Qui, maxime nulla rerum reprehenderit nobis aspernatur voluptatibus soluta beatae saepe debitis pariatur nihil odit dolorem vero aliquam.</p>
     </div>
   </section>
