--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,7 @@
           Hola soy Julia Gonzalez
       </h1>
       <h2>
-          Desarrollo entornos virtuales y escribo art&iacute;culos sobre dise&nacute;o.
+        Desarrollo entornos virtuales, escenarios 2D, 3D, diseño de personajes y criaturas.         
       </h2>
     </div>
     <div class="hero-inferior">
@@ -99,7 +99,9 @@
   <section id="sobre-mi" class="sobre-mi seccion-oscura">
     <div class="contenedor">
       <h2 class="seccion-titulo">Conoceme</h2>
-      <p class="seccion-texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore earum consequuntur nostrum? Qui, maxime nulla rerum reprehenderit nobis aspernatur voluptatibus soluta beatae saepe debitis pariatur nihil odit dolorem vero aliquam.</p>
+      <p class="seccion-texto">Soy Julia, una apasionada del modelado, diseño e imaginación. Te presento algunos de mis trabajos.
+        Cada proyecto que presento refleja mi dedicación y amor por crear experiencias visuales.
+        </p>
     </div>
   </section>
 
