--- a/html/index.html
+++ b/html/index.html
@@ -87,7 +87,8 @@
           Hola soy Julia Gonzalez
       </h1>
       <h2>
-        Desarrollo entornos virtuales, escenarios 2D, 3D, diseño de personajes y criaturas.         
+        Julia, una apasionada del modelado, diseño e imaginación. Te presento algunos de mis trabajos.
+        Cada proyecto que presento refleja mi dedicación y amor por crear experiencias visuales.        
       </h2>
     </div>
     <div class="hero-inferior">
