--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
         <!-- Proyecto 5 -->
         <div class="col-12 col-md-6 col-lg-4 ">
           <div class="proyecto">
-            <img src="./images/HUD.png" alt="Proyecto 5">
+            <img src="./images/cat ss1" alt="Proyecto 5">
             <div class="overlay">
               <p>Proyecto 5</p>
               <div class="iconos-contenedor">
