--- a/index.html
+++ b/index.html
@@ -286,15 +286,15 @@
       <ul class="list-group list-group-flush">
         <a href="https://www.linkedin.com/in/julia-gonzalez-sanchez-67347a278?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=ios_app" target="_blank" rel="noopener noreferrer">
           <li class="list-group-item">
-            El decorador @property en Python</li>
+            linkedin
         </a>
         <a href="redbluefrench@gmail.com" target="_blank" rel="noopener noreferrer">
           <li class="list-group-item">
-            Python tutorial ciclos</li>
+            Correo
         </a>
         <a href="+523326510310" target="_blank" rel="noopener noreferrer">
           <li class="list-group-item">
-            Python como herramienta para big data</li>
+           Num. Celular
         </a>
       </ul>
     </div>
