--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!-- About me-->
   <section id="sobre-mi" class="sobre-mi seccion-oscura">
     <div class="contenedor">
-      <h2 class="seccion-titulo">Conoceme</h2>
+      <h2 class="seccion-titulo">Conóceme</h2>
       <p class="seccion-texto">Soy Julia, una apasionada del modelado, diseño e imaginación. Te presento algunos de mis trabajos.
         Cada proyecto que presento refleja mi dedicación y amor por crear experiencias visuales.</p>
     </div>
