--- a/html/index.html
+++ b/html/index.html
@@ -233,7 +233,7 @@
         <!-- Proyecto 5 -->
         <div class="col-12 col-md-6 col-lg-4 ">
           <div class="proyecto">
-            <img src="./images/proyecto5.png" alt="Proyecto 5">
+            <img src="HUD.png" alt="Proyecto 5">
             <div class="overlay">
               <p>Proyecto 5</p>
               <div class="iconos-contenedor">
