--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       flex-column 
       justify-content-center 
       align-items-center">
-      <img class="hero-image-dev" src="images/143459682.png"alt="Foto de Fulanito">
+      <img class="hero-image-dev" src="images/143459682.png"alt="Foto de Julia">
       <h1>
           Hola soy Julia
       </h1>
