reruteando las imagenes

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </h2>
     </div>
     <div class="hero-inferior">
-      <img class="hero-inferior-imagen img-fluid" src="images/HUD.png" alt="Monitor, laptop y logos de HTML, CSS, JS y React." srcset="">
+      <img class="hero-inferior-imagen img-fluid" src="./images/HUD.png" alt="Monitor, laptop y logos de HTML, CSS, JS y React." srcset="">
     </div>
   </section>
 
@@ -178,7 +178,8 @@
         <!-- Proyecto 2 -->
         <div class="col-12 col-md-6 col-lg-4 ">
           <div class="proyecto">
-            <img src="images/Untitled-Camera.png" alt="Proyecto 2">
+            <img src="./images/Untitled-Camera.png" alt="Proyecto 2">
+            
             <div class="overlay">
               <p>Proyecto 2</p>
               <div class="iconos-contenedor">
